--- a/index.html
+++ b/index.html
@@ -5,18 +5,39 @@
 	<style>
 		body {
 			background-color: #2a4d2e;
-			background-repeat: no-repeat;
-			background-attachment: fixed;
-			background-position: center center;
-			background-size: 100% 100%;
 		}
 
-		#planepane {
+		.background {
+			position: fixed;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			z-index: 0;
+		}
+
+		.backgroundimage {
+			position: fixed;
+			left: -5%;
+			top: -5%;
+			width: 110%;
+			height: 110%;
+
+			-webkit-filter: blur(1px);
+			-moz-filter: blur(1px);
+			-o-filter: blur(1px);
+			-ms-filter: blur(1px);
+			filter: blur(1px);
+		}
+
+		.planepane {
 			position: absolute;
 			bottom: 10px;
-			left: 25%;
-			width: 50%;
-			height: 40%;
+			z-index: 1;
+			left: 50%;
+			margin-left: -400px;
+			width: 800px;
+			height: 400px;
 			float: left;
 			font: 17px Georgia, serif;
 			text-align: center;
@@ -40,7 +61,7 @@
 			font-size: 75%;
 		}
 
-		#controls {
+		.controls {
 			position: absolute;
 			bottom: 60px;
 			left: 5%;
@@ -48,7 +69,7 @@
 			text-align: center;
 		}
 
-		#result {
+		.result {
 			position: absolute;
 			bottom: 10px;
 			left: 5%;
@@ -56,9 +77,10 @@
 			text-align: center;
 		}
 
-		#manacost {
+		.manacost {
 			display: inline-block;
 			width: 17px;
+			height: 17px;
 			font: 95% times;
 			font-style: bold;
 			color: #000000;
@@ -136,10 +158,10 @@
 			document.getElementById('ruletext').innerHTML = ReplaceMagicSymbols(plane.ruletext);
 			document.getElementById('chaos').innerHTML = ReplaceMagicSymbols(plane.chaos);
 			if (plane.imgsrc != "") {
-				document.body.style.backgroundImage = "url('" + plane.imgsrc + "')";
+				document.getElementById('planeimage').src = plane.imgsrc;
 			}
 			else {
-				document.body.style.backgroundImage = "none";
+				document.getElementById('planeimage').src = "";
 			}
 			if (plane.imgauthor != "") {
 				document.getElementById('credit').innerHTML = "Art by " + plane.imgauthor;
@@ -156,26 +178,7 @@
 		}
 
 		function CostSource(number) {
-			// if (number <= 16) {
-			// 	return '<img src="' + MagicSymbolSource(number.toString()) + '" />';
-			// }
-			return '<span id="manacost">' + number.toString() + "</span>";
-			/*
-			var tempnum = number;
-			var result = "";
-			while (tempnum > 100) {
-				result += '<img src="' + MagicSymbolSource(100) + '" />';
-				tempnum -= 100;
-			}
-			while (tempnum > 10) {
-				result += '<img src="' + MagicSymbolSource(10) + '" />';
-				tempnum -= 10;
-			}
-			if (tempnum > 0) {
-				result += '<img src="' + MagicSymbolSource(tempnum.toString()) + '" />';
-			}
-			return result;
-			*/
+			return '<span class="manacost">' + number.toString() + "</span>";
 		}
 
 		function OnClickDice() {
@@ -219,15 +222,18 @@
 </head>
 
 <body onload="OnLoadDocument()">
-	<div id="planepane">
-		<div id="planetext">
+	<div class="background">
+		<img class="backgroundimage" id="planeimage">
+	</div>
+	<div class="planepane">
+		<div class="planetext">
 			<h1 id="name"></h1>
 			<h2 id="plane"></h2>
 			<p id="ruletext"></p>
 			<p id="chaos"></p>
 			<p id="credit"></p>
 		</div>
-		<div id="controls">
+		<div class="controls">
 			<button type="button" class="button" onclick="OnClickDice()">Pay
 				<span id="cost"></span>: Roll a dice.
 			</button>
@@ -236,7 +242,7 @@
 			<button type="button" class="button" onclick="Planechase()">Next plane.
 			</button>
 		</div>
-		<div id="result">
+		<div class="result">
 			<p>Result -
 				<span id="dice"></span>
 			</p>
