added plane arts (part 2)

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 				document.getElementById('planeimage').src = "";
 			}
 			if (plane.imgauthor != "") {
-				document.getElementById('credit').innerHTML = "Art by " + plane.imgauthor;
+				document.getElementById('credit').innerHTML = "Art by " + plane.imgauthor + "</br>&copy;Wizards of the Coast LLC";
 			}
 			else {
 				document.getElementById('credit').innerHTML = "";
